# vocab_crud

./: .env  .env-template  .env.test  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml  cicd.yml
docs/: db-schema.dbml
migrations/2023-09-01-133005_create_words/: down.sql  up.sql
migrations/2023-09-05-200826_create_examples/: down.sql  up.sql
migrations/2023-11-26-105211_user_column/: down.sql  up.sql
src/: db_util.rs  dtos.rs  extractors.rs  handlers.rs  lib.rs  main.rs  mappers.rs  models.rs  routes.rs  schema.rs  validators.rs
src/handlers/: create_example_handler.rs  create_word_handler.rs  delete_example_handler.rs  delete_word_handler.rs  health_check_handler.rs  list_handler.rs  mod.rs  update_word_handler.rs
test-database/: docker-compose.yml
tests/: integration_tests.rs
