[package]
name = "vocab_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.28"
diesel = { version = "2.1.1", features = ["postgres", "uuid", "chrono"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
diesel_migrations = "2.1.0"
